# plonky2-ed25519

./: Cargo.toml  Dockerfile  test.sh
plonky2-sha512/: Cargo.toml
src/: main.rs
