[package]
name = "plonky2_sha512"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cuda = ["plonky2/cuda", "plonky2_field/cuda"]

[dependencies]
plonky2 = { git = "https://github.com/ahmetyalp/plonky2-gpu.git", rev = "6db129b9b81a45d9c863c57d5516142df8f46439" }
plonky2_util ={ git = "https://github.com/ahmetyalp/plonky2-gpu.git", rev = "6db129b9b81a45d9c863c57d5516142df8f46439" }
plonky2_field = { git = "https://github.com/ahmetyalp/plonky2-gpu.git", rev = "6db129b9b81a45d9c863c57d5516142df8f46439" }
plonky2_u32 = { git = "https://github.com/ahmetyalp/plonky2-gpu.git", rev = "6db129b9b81a45d9c863c57d5516142df8f46439" }
plonky2_ecdsa ={ git = "https://github.com/ahmetyalp/plonky2-gpu.git", rev = "6db129b9b81a45d9c863c57d5516142df8f46439" }

itertools = "0.10.0"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.40"
log = "0.4.14"
num = { version = "0.4", features = ["rand"] }
rand = "0.8.4"
rand_chacha = "0.3.1"
unroll = "0.1.5"
keccak-hash = "0.10.0"
static_assertions = "1.1.0"
sha2 = "0.10"
env_logger = "0.10.0"

[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 1
